--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,9 @@ html
   head
     title
     // Latest compiled and minified CSS
-    link(rel='stylesheet', href='css/flatly.bootstrap.css')
+    link(rel='stylesheet', href='views/css/flatly.bootstrap.css')
     | &#x9;
-    link(rel='stylesheet', href='css/flatly.style.css')
+    link(rel='stylesheet', href='views/css/flatly.style.css')
     // Latest compiled and minified JavaScript
     script(src='js/jquery-3.1.1.min.js')
     | &#x9;
